@@ -10,7 +10,6 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -23,12 +22,13 @@ public class SecurityConfig {
                 httpSecurity
                         //cors
                         .cors(cors -> cors.configurationSource(request -> {
-                            CorsConfiguration config = new CorsConfiguration();
-                            config.setAllowedHeaders(Collections.singletonList("*"));
-                            config.setAllowedMethods(Collections.singletonList("*"));
-                            config.setAllowedOriginPatterns(Collections.singletonList("http://localhost:3000")); // ⭐️ 허용할 origin
-                            config.setAllowCredentials(true);
-                            return config;
+                           var corsConfiguration =  new CorsConfiguration();
+                            corsConfiguration.setAllowedOrigins(List.of("*"));  // 모든 도메인 허용
+                            corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));  // 모든 HTTP 메서드 허용
+                            corsConfiguration.setAllowedHeaders(List.of("*"));  // 모든 헤더 허용
+                            corsConfiguration.setAllowCredentials(true);  // 자격 증명(쿠키, Authorization 헤더 등) 허용
+
+                            return corsConfiguration;
                         }))
                         .csrf((auth) -> auth.disable())
                         .authorizeHttpRequests(auth -> auth
